tests/ui/fail_datagram_type_mismatch_inbound_to_handler.stderr
error[E0277]: the trait bound `EchoString: DatagramHandler<Request>` is not satisfied
  --> tests/ui/fail_datagram_type_mismatch_inbound_to_handler.rs:36:18
   |
36 |         .handler(EchoString);
   |          ------- ^^^^^^^^^^ unsatisfied trait bound
   |          |
   |          required by a bound introduced by this call
   |
help: the trait `DatagramHandler<Request>` is not implemented for `EchoString`
      but trait `DatagramHandler<String>` is implemented for it
  --> tests/ui/fail_datagram_type_mismatch_inbound_to_handler.rs:24:1
   |
24 | impl DatagramHandler<String> for EchoString {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `String`, found `Request`
note: required by a bound in `DatagramPipelineBuilder::<InboundPhase, C, InP, Identity, rs_netty::pipeline::datagram::builder::Missing, Identity, CurrentIn, (), ()>::handler`
  --> src/pipeline/datagram/builder.rs
   |
   |     pub fn handler<H>(
   |            ------- required by a bound in this associated function
...
   |         H: DatagramHandler<CurrentIn>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DatagramPipelineBuilder::<InboundPhase, C, InP, Identity, Missing, Identity, CurrentIn, (), ()>::handler`
